Fix some deprecated calls. New 5.0 splash screen.