@@ -25,6 +25,7 @@ package org.jjazz.base.api.actions;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import org.jjazz.utilities.api.Utilities;
 import org.openide.awt.ActionID;
@@ -46,7 +47,8 @@ public final class Donate implements ActionListener
         URL url = null;
         try
         {
-            url = new URL(DONATE_URL);
+            var uri = URI.create(DONATE_URL);
+            url = uri.toURL();
         } catch (MalformedURLException ex)
         {
             Exceptions.printStackTrace(ex);
